--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <!-- <script src="https://cdn.tailwindcss.com"></script> -->
   <link rel="stylesheet" href="../dist/output.css">
-  <title>React App</title>
+  <title>CMS-Ticket-sale</title>
 </head>
 
 <body>
