change folder build

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,7 @@
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <!-- <script src="https://cdn.tailwindcss.com"></script> -->
-  <link rel="stylesheet" href="../dist/output.css">
+  <link rel="stylesheet" href="../dist/tailwind.css">
   <title>CMS-Ticket-sale</title>
 </head>
 
